--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <article class="card card--2">
         <div class="card__info-hover">
           <div class="card__clock-info">
-            <span class="card__time">1 ora</span>
+            <span class="card__time">timp aprox. ~1 ora</span>
           </div>
         </div>
         <div class="card__img"></div>
@@ -26,20 +26,17 @@
           <div class="card__img--hover"></div>
         </a>
         <div class="card__info">
-          <span class="card__category"> Serviciu</span>
+          <span class="card__category"> Digiland.ro</span>
           <h3 class="card__title">Diagnosticare Sistem</h3>
           <span class="card__by"
-            >by
-            <a href="#" class="card__author" title="author"
-              >Digiland.ro</a
-            ></span
+            >RON <a href="#" class="card__author" title="author">49.99</a></span
           >
         </div>
       </article>
       <article class="card card--3">
         <div class="card__info-hover">
           <div class="card__clock-info">
-            <span class="card__time">30 min</span>
+            <span class="card__time">timp aprox. ~30m</span>
           </div>
         </div>
         <div class="card__img"></div>
@@ -47,20 +44,17 @@
           <div class="card__img--hover"></div>
         </a>
         <div class="card__info">
-          <span class="card__category"> Serviciu</span>
+          <span class="card__category"> digiland.ro</span>
           <h3 class="card__title">Montare Componenta</h3>
           <span class="card__by"
-            >by
-            <a href="#" class="card__author" title="author"
-              >Digiland.ro</a
-            ></span
+            >RON <a href="#" class="card__author" title="author">49.99</a></span
           >
         </div>
       </article>
       <article class="card card--4">
         <div class="card__info-hover">
           <div class="card__clock-info">
-            <span class="card__time">1 ora</span>
+            <span class="card__time">timp aprox. ~1 ora</span>
           </div>
         </div>
         <div class="card__img"></div>
@@ -68,20 +62,17 @@
           <div class="card__img--hover"></div>
         </a>
         <div class="card__info">
-          <span class="card__category"> Serviciu</span>
+          <span class="card__category"> digiland,ro</span>
           <h3 class="card__title">Upade BIOS</h3>
           <span class="card__by"
-            >by
-            <a href="#" class="card__author" title="author"
-              >Digiland.ro</a
-            ></span
+            >RON <a href="#" class="card__author" title="author">99.99</a></span
           >
         </div>
       </article>
       <article class="card card--1">
         <div class="card__info-hover">
           <div class="card__clock-info">
-            <span class="card__time">12 ore</span>
+            <span class="card__time">timp aprox. ~12 ore</span>
           </div>
         </div>
         <div class="card__img"></div>
@@ -89,13 +80,11 @@
           <div class="card__img--hover"></div>
         </a>
         <div class="card__info">
-          <span class="card__category"> SERVICIU</span>
+          <span class="card__category"> digiland.ro</span>
           <h3 class="card__title">Asamblare Sistem</h3>
           <span class="card__by"
-            >by
-            <a href="#" class="card__author" title="author"
-              >Digiland.ro</a
-            ></span
+            >RON
+            <a href="#" class="card__author" title="author">149.99</a></span
           >
         </div>
       </article>
@@ -105,7 +94,7 @@
       <article class="card card--6">
         <div class="card__info-hover">
           <div class="card__clock-info">
-            <span class="card__time">30 min ~ 3 ore</span>
+            <span class="card__time">timp aprox. ~45 min</span>
           </div>
         </div>
         <div class="card__img"></div>
@@ -113,13 +102,10 @@
           <div class="card__img--hover"></div>
         </a>
         <div class="card__info">
-          <span class="card__category"> Serviciu</span>
+          <span class="card__category"> digiland.ro</span>
           <h3 class="card__title">Clonare HDD</h3>
           <span class="card__by"
-            >by
-            <a href="#" class="card__author" title="author"
-              >Digiland.ro</a
-            ></span
+            >RON <a href="#" class="card__author" title="author">69.99</a></span
           >
         </div>
       </article>
@@ -134,20 +120,17 @@
           <div class="card__img--hover"></div>
         </a>
         <div class="card__info">
-          <span class="card__category"> Serviciu</span>
+          <span class="card__category"> digiland.ro</span>
           <h3 class="card__title">Devirusare Sistem</h3>
           <span class="card__by"
-            >by
-            <a href="#" class="card__author" title="author"
-              >Digiland.ro</a
-            ></span
+            >RON <a href="#" class="card__author" title="author">69.99</a></span
           >
         </div>
       </article>
       <article class="card card--7">
         <div class="card__info-hover">
           <div class="card__clock-info">
-            <span class="card__time">1 ora</span>
+            <span class="card__time">timp aprox. ~1 ora</span>
           </div>
         </div>
         <div class="card__img"></div>
@@ -155,13 +138,10 @@
           <div class="card__img--hover"></div>
         </a>
         <div class="card__info">
-          <span class="card__category"> Serviciu</span>
+          <span class="card__category"> digiland.ro</span>
           <h3 class="card__title">Curatare Sistem</h3>
           <span class="card__by"
-            >by
-            <a href="#" class="card__author" title="author"
-              >Digiland.ro</a
-            ></span
+            >RON <a href="#" class="card__author" title="author">79.99</a></span
           >
         </div>
       </article>
@@ -176,13 +156,10 @@
           <div class="card__img--hover"></div>
         </a>
         <div class="card__info">
-          <span class="card__category"> Serviciu</span>
+          <span class="card__category"> digiland.ro</span>
           <h3 class="card__title">Instalare Sistem de Operare</h3>
           <span class="card__by"
-            >by
-            <a href="#" class="card__author" title="author"
-              >Digiland.ro</a
-            ></span
+            >RON <a href="#" class="card__author" title="author">99.99</a></span
           >
         </div>
       </article>
