--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       <article class="card card--8">
         <div class="card__info-hover">
           <div class="card__clock-info">
-            <span class="card__time">2 ore</span>
+            <span class="card__time">timp aprox. ~2 ore</span>
           </div>
         </div>
         <div class="card__img"></div>
