--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <article class="card card--5">
         <div class="card__info-hover">
           <div class="card__clock-info">
-            <span class="card__time">3 ore</span>
+            <span class="card__time">timp aprox. ~3 ore</span>
           </div>
         </div>
         <div class="card__img"></div>
