--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
           <div class="card__img--hover"></div>
         </a>
         <div class="card__info">
-          <span class="card__category"> Digiland.ro</span>
-          <h3 class="card__title">Diagnosticare Sistem</h3>
+          <span class="card__category">digiland.ro/servicii</span>
+          <h4 class="card__title">Diagnosticare Sistem</h4>
           <span class="card__by"
             >RON <a href="#" class="card__author" title="author">49.99</a></span
           >
@@ -44,8 +44,8 @@
           <div class="card__img--hover"></div>
         </a>
         <div class="card__info">
-          <span class="card__category"> digiland.ro</span>
-          <h3 class="card__title">Montare Componenta</h3>
+          <span class="card__category">digiland.ro/servicii</span>
+          <h4 class="card__title">Montare Componenta</h4>
           <span class="card__by"
             >RON <a href="#" class="card__author" title="author">49.99</a></span
           >
@@ -62,8 +62,8 @@
           <div class="card__img--hover"></div>
         </a>
         <div class="card__info">
-          <span class="card__category"> digiland,ro</span>
-          <h3 class="card__title">Upade BIOS</h3>
+          <span class="card__category">digiland.ro/servicii</span>
+          <h4 class="card__title">Update BIOS</h4>
           <span class="card__by"
             >RON <a href="#" class="card__author" title="author">99.99</a></span
           >
@@ -80,8 +80,8 @@
           <div class="card__img--hover"></div>
         </a>
         <div class="card__info">
-          <span class="card__category"> digiland.ro</span>
-          <h3 class="card__title">Asamblare Sistem</h3>
+          <span class="card__category">digiland.ro/servicii</span>
+          <h4 class="card__title">Asamblare Sistem</h4>
           <span class="card__by"
             >RON
             <a href="#" class="card__author" title="author">149.99</a></span
@@ -102,8 +102,8 @@
           <div class="card__img--hover"></div>
         </a>
         <div class="card__info">
-          <span class="card__category"> digiland.ro</span>
-          <h3 class="card__title">Clonare HDD</h3>
+          <span class="card__category">digiland.ro/servicii</span>
+          <h4 class="card__title">Clonare HDD</h4>
           <span class="card__by"
             >RON <a href="#" class="card__author" title="author">69.99</a></span
           >
@@ -120,8 +120,8 @@
           <div class="card__img--hover"></div>
         </a>
         <div class="card__info">
-          <span class="card__category"> digiland.ro</span>
-          <h3 class="card__title">Devirusare Sistem</h3>
+          <span class="card__category">digiland.ro/servicii</span>
+          <h4 class="card__title">Devirusare Sistem</h4>
           <span class="card__by"
             >RON <a href="#" class="card__author" title="author">69.99</a></span
           >
@@ -138,8 +138,8 @@
           <div class="card__img--hover"></div>
         </a>
         <div class="card__info">
-          <span class="card__category"> digiland.ro</span>
-          <h3 class="card__title">Curatare Sistem</h3>
+          <span class="card__category">digiland.ro/servicii</span>
+          <h4 class="card__title">Curatare Sistem</h4>
           <span class="card__by"
             >RON <a href="#" class="card__author" title="author">79.99</a></span
           >
@@ -156,8 +156,8 @@
           <div class="card__img--hover"></div>
         </a>
         <div class="card__info">
-          <span class="card__category"> digiland.ro</span>
-          <h3 class="card__title">Instalare Sistem de Operare</h3>
+          <span class="card__category">digiland.ro/servicii</span>
+          <h4 class="card__title">Instalare Sistem de Operare</h4>
           <span class="card__by"
             >RON <a href="#" class="card__author" title="author">99.99</a></span
           >
